trunk/css/dhp-admin.css
/** CSS styles specific to Admin Views in DH Press
 **/

@charset "UTF-8";

/* Fixes background color that bootstrap sets */
body {
	background: none;
}
/* Fixes menu spacing that bootstrap overrides */
ul.wp-submenu {
	margin-left: 0;
}
/* Fixes spacing that bootstrap overrides */
.submitbox label {
	display: inline;
}
/* Pulls entry point X to right */
#entry-point .close {
	position: absolute;
	right:10px;
	top: 85px;
}


/* ========== Old styles -- not yet used ========== */
/* Positions upload button on right for icon upload box */

#dhp_icons_box .misc-pub-section, #TB_ajaxContent .misc-pub-section {
	padding: 0px;
	min-height: 34px;
}

#dhp_icons_box .misc-pub-section span {
	padding-top: 10px;
	float: left;
}
#dhp_icons_box .dhp-icon-upload {
	margin-top: 5px;
	text-align: right;
	float: right;
	line-height: 23px;
}

/* ========== For show/hide of components ========== */

.hide {
  display: none;
}

/* ========== jQueryUI components =========== */

.ui-draggable, .ui-droppable {
  background-position: top;
}

.ui-dialog-title, .ui-dialog-content, .ui-dialog-buttonpane {
  font-size: small;
  font-family: "Trebuchet MS", "Arial", "Helvetica", "Verdana", "sans-serif";
}

.ui-accordion, .ui-accordion-header, .ui-accordion-content {
  font-size: small;
  font-family: "Trebuchet MS", "Arial", "Helvetica", "Verdana", "sans-serif";  
}

.ui-accordion .ui-accordion-header {
  display: block;
  position: relative;
}

.ui-accordion .ui-accordion-header .ui-accordion-header-icon {
  left: 0.5em !important;
}

.ui-accordion .ui-accordion-icons {
  padding-left: 2.2em !important;
}

.ui-icon {
  display: block;
  overflow: hidden;
}

/* ---- Opacity slider ---- */

.opacity-slider {
  height: 15px;
  width: 80px;
  display: inline-block;
}

.ui-slider {
  border: 2;
  margin: 4px;
  margin-left: 12px;
}

.ui-slider .ui-slider-handle {
    cursor: default;
    color: blue;
    height: 15px;
    width: 5px;
    padding-left: 5px;
    z-index: 2;
}

/* ---- Geo Locate Selector ---- */

.geo-locate-widget {
  width: 250px;
  height: 200px;
}

/* ---- Icon Picker ---- */

.icon-list {
  list-style: none;
  padding-left: 0;
}

.icon-list li {
  border: 2px dotted gray;
  list-style-type: none;
  margin: 4px;
  float: left;
}

.icon-list li:hover {
  border: 2px dotted orange;
}

.icon-list .selected {
  border: 2px solid red;
  background-color: yellow;
}

/* ---- Nestable Sorter (default styles) ---- */


.dd {
  position: relative;
/*  display: block; */
  margin: 0;
  padding: 0;
  max-width: 600px;
  list-style: none;
  font-size: 13px;
  line-height: 20px;
}

.dd-list { display: block; position: relative; margin: 0; padding: 0; list-style: none; }
.dd-list .dd-list { padding-left: 30px; }
.dd-collapsed .dd-list { display: none; }

.dd-item,
.dd-empty,
.dd-placeholder {
  display: block;
  position: relative;
  margin: 0;
  padding: 0;
  min-height: 20px;
  font-size: 13px;
  line-height: 20px;
}

  /* Ensure draggable bars are wide enough */
.dd-item {
  width: 100%;
}

.dd-handle { display: block; height: 30px; margin: 5px 0; padding: 5px 10px; color: #333; text-decoration: none; font-weight: bold; border: 1px solid #ccc;
    background: #fafafa;
    background: -webkit-linear-gradient(top, #fafafa 0%, #eee 100%);
    background:    -moz-linear-gradient(top, #fafafa 0%, #eee 100%);
    background:         linear-gradient(top, #fafafa 0%, #eee 100%);
    -webkit-border-radius: 3px;
            border-radius: 3px;
    box-sizing: border-box; -moz-box-sizing: border-box;
}
.dd-handle:hover { color: #2ea8e5; background: #fff; }

.dd-item > button { display: block; position: relative; cursor: pointer; float: left; width: 25px; height: 20px; margin: 5px 0; padding: 0; text-indent: 100%; white-space: nowrap; overflow: hidden; border: 0; background: transparent; font-size: 12px; line-height: 1; text-align: center; font-weight: bold; }
.dd-item > button:before { content: '+'; display: block; position: absolute; width: 100%; text-align: center; text-indent: 0; }
.dd-item > button[data-action="collapse"]:before { content: '-'; }

.dd-placeholder,
.dd-empty { margin: 5px 0; padding: 0; min-height: 30px; background: #f2fbff; border: 1px dashed #b6bcbf; box-sizing: border-box; -moz-box-sizing: border-box; }
.dd-empty { border: 1px dashed #bbb; min-height: 100px; background-color: #e5e5e5;
    background-image: -webkit-linear-gradient(45deg, #fff 25%, transparent 25%, transparent 75%, #fff 75%, #fff), 
                      -webkit-linear-gradient(45deg, #fff 25%, transparent 25%, transparent 75%, #fff 75%, #fff);
    background-image:    -moz-linear-gradient(45deg, #fff 25%, transparent 25%, transparent 75%, #fff 75%, #fff), 
                         -moz-linear-gradient(45deg, #fff 25%, transparent 25%, transparent 75%, #fff 75%, #fff);
    background-image:         linear-gradient(45deg, #fff 25%, transparent 25%, transparent 75%, #fff 75%, #fff), 
                              linear-gradient(45deg, #fff 25%, transparent 25%, transparent 75%, #fff 75%, #fff);
    background-size: 60px 60px;
    background-position: 0 0, 30px 30px;
}

.dd-dragel {
  position: absolute;
  pointer-events:
  none; z-index: 9999;
}

.dd-dragel > .dd-item .dd-handle { margin-top: 0; }
.dd-dragel .dd-handle {
    -webkit-box-shadow: 2px 4px 6px 0 rgba(0,0,0,.1);
            box-shadow: 2px 4px 6px 0 rgba(0,0,0,.1);
}

/*
@media only screen and (min-width: 700px) { 

    .dd { float: left; width: 48%; }
    .dd + .dd { margin-left: 2%; }

}
*/

.dd-hover > .dd-handle { background: #2ea8e5 !important; }


/* ---- Special style for dragging handles used in DH Press ---- */

.dd3-content {
/*    display: block; */
    height: 30px;
    margin: 5px 0;
    padding: 5px 10px 5px 40px;
    color: #333;
    text-decoration: none;
    font-weight: bold;
    border: 1px solid #ccc;
    background: #fafafa;
    background: -webkit-linear-gradient(top, #fafafa 0%, #eee 100%);
    background:    -moz-linear-gradient(top, #fafafa 0%, #eee 100%);
    background:         linear-gradient(top, #fafafa 0%, #eee 100%);
    -webkit-border-radius: 3px;
            border-radius: 3px;
    box-sizing: border-box; -moz-box-sizing: border-box;
}

/* .dd3-content:hover { color: #2ea8e5; background: #fff; } */

.dd-dragel > .dd3-item > .dd3-content { margin: 0; }

.dd3-item > button { margin-left: 30px; }

.dd3-handle {
    position: absolute;
    margin: 0;
    left: 0;
    top: 0;
    cursor: move;
    width: 30px;
    text-indent: 100%;
    white-space: nowrap;
    overflow: hidden;
    border: 1px solid #aaa;
    background: #ddd;
    background: -webkit-linear-gradient(top, #ddd 0%, #bbb 100%);
    background:    -moz-linear-gradient(top, #ddd 0%, #bbb 100%);
    background:         linear-gradient(top, #ddd 0%, #bbb 100%);
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
}
.dd3-handle:before { content: '≡'; display: block; position: absolute; left: 0; top: 3px; width: 100%; text-align: center; text-indent: 0; color: #fff; font-size: 20px; font-weight: normal; }
.dd3-handle:hover { background: #ddd; }


/* ---- Additional custom styles for DH Press to do nested sortable ---- */

.dd .dd-list .dd-item .select-legend {
  float: right;
  cursor: cell;
}

.dd .dd-list .dd-item .select-legend .assign {
  position: relative;
  bottom: 4px;
}

/*    For user uploaded images for legends -- currently unused
.dd .dd-list .dd-item .select-legend img {
  height: 18px;
  width: auto;
}
*/

  /* For maki-icon selections for legends */
.dd .dd-list .dd-item .select-legend .maki-icon {
  position: relative;
  left: 0px;
  top: 0px;
  display: inline-block;
}

  /* For color selections for legends */
.dd .dd-list .dd-item .select-legend .color-box {
  position: relative;
  left: 0px;
  top: 0px;
  width: 18px;
  height: 18px;
  display: inline-block;
}

  /* Add this to dd3-content class in order to hide content while dragging bar */
.hide-content {
  visibility: hidden;  
}

